k8s/apps/mealie/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mealie
  namespace: mealie
  labels:
    app: mealie
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mealie
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mealie
    spec:
      nodeAffinity:
        preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            preference:
              matchExpressions:
                - key: node-role/worker
                  operator: In
                  values: ["true"]
      containers:
        - name: mealie
          image: ghcr.io/mealie-recipes/mealie:v3.26.0
          ports:
            - containerPort: &port 9000
              name: http

          volumeMounts:
            - name: mealie-config
              mountPath: /config

          resources:
            requests:
              cpu: 150m
              memory: 256Mi
            limits:
              cpu: 300m
              memory: 1000M

      volumes:
        - name: mealie-config
          persistentVolumeClaim:
            claimName: mealie-config
