k8s/apps/mealie/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mealie
  namespace: mealie
spec:
  selector:
    app: mealie
  ports:
    - name: http
      port: 9000
      targetPort: 9000
  type: ClusterIP
